fix: fix some layout issues

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -50,3 +50,7 @@
     }
   }
 }
+
+.active {
+  color: var(--green-600);
+}
