--- a/src/pages/products/products.module.scss
+++ b/src/pages/products/products.module.scss
@@ -1,6 +1,6 @@
 .bunner {
   max-width: 100vw;
-  height: 85vh;
+  height: calc(100vh - 6.5rem);
   display: flex;
   align-items: center;
   justify-content: center;
